; ModuleID = '/home/carl/AnghaBench/winfile/src/extr_wfdrop.c_DropEffect.c'
source_filename = "/home/carl/AnghaBench/winfile/src/extr_wfdrop.c_DropEffect.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MK_CONTROL = common dso_local global i32 0, align 4
@DROPEFFECT_COPY = common dso_local global i32 0, align 4
@MK_SHIFT = common dso_local global i32 0, align 4
@DROPEFFECT_MOVE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32, i32)* @DropEffect to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @DropEffect(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  store i32 0, i32* %7, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* @MK_CONTROL, align 4
  %10 = and i32 %8, %9
  %11 = icmp ne i32 %10, 0
  br i1 %11, label %12, label %16

12:                                               ; preds = %3
  %13 = load i32, i32* %6, align 4
  %14 = load i32, i32* @DROPEFFECT_COPY, align 4
  %15 = and i32 %13, %14
  store i32 %15, i32* %7, align 4
  br label %26

16:                                               ; preds = %3
  %17 = load i32, i32* %4, align 4
  %18 = load i32, i32* @MK_SHIFT, align 4
  %19 = and i32 %17, %18
  %20 = icmp ne i32 %19, 0
  br i1 %20, label %21, label %25

21:                                               ; preds = %16
  %22 = load i32, i32* %6, align 4
  %23 = load i32, i32* @DROPEFFECT_MOVE, align 4
  %24 = and i32 %22, %23
  store i32 %24, i32* %7, align 4
  br label %25

25:                                               ; preds = %21, %16
  br label %26

26:                                               ; preds = %25, %12
  %27 = load i32, i32* %7, align 4
  %28 = icmp eq i32 %27, 0
  br i1 %28, label %29, label %44

29:                                               ; preds = %26
  %30 = load i32, i32* %6, align 4
  %31 = load i32, i32* @DROPEFFECT_COPY, align 4
  %32 = and i32 %30, %31
  %33 = icmp ne i32 %32, 0
  br i1 %33, label %34, label %36

34:                                               ; preds = %29
  %35 = load i32, i32* @DROPEFFECT_COPY, align 4
  store i32 %35, i32* %7, align 4
  br label %36

36:                                               ; preds = %34, %29
  %37 = load i32, i32* %6, align 4
  %38 = load i32, i32* @DROPEFFECT_MOVE, align 4
  %39 = and i32 %37, %38
  %40 = icmp ne i32 %39, 0
  br i1 %40, label %41, label %43

41:                                               ; preds = %36
  %42 = load i32, i32* @DROPEFFECT_MOVE, align 4
  store i32 %42, i32* %7, align 4
  br label %43

43:                                               ; preds = %41, %36
  br label %44

44:                                               ; preds = %43, %26
  %45 = load i32, i32* %7, align 4
  ret i32 %45
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
